--- a/assets/style.css
+++ b/assets/style.css
@@ -117,7 +117,12 @@ body {
 }
 
 .nav-pills .nav-link {
-	color: #000
+	color: #000;
+	cursor: pointer;
+}
+
+.nav-link:hover {
+	background-color: #BEB45A;
 }
 
 .item-column {
@@ -164,7 +169,7 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: 40px;
 }
 
 .quote__author {
